--- a/src/Introduction.stories.mdx
+++ b/src/Introduction.stories.mdx
@@ -11,7 +11,6 @@ Browse example stories now by navigating to them in the sidebar.
 View their code in the `src/storybook-examples` directory to learn how they work.
 We recommend building UIs with a [**component-driven**](https://componentdriven.org) process starting with atomic components and ending with pages.
 
-<h1>欢迎来到 vikingship 组件库</h1>
-<p>vikingship 是为慕课网课程打造的一套教学组件库，从零到一让大家去学习</p>
+<h1>欢迎来到 liangShip 组件库</h1>
 <h3>安装试试</h3>
-<code>npm install vikingship-ui --save</code>
+<code>npm install liangShip-ui --save</code>
