--- a/src/Introduction.stories.mdx
+++ b/src/Introduction.stories.mdx
@@ -12,5 +12,8 @@ View their code in the `src/storybook-examples` directory to learn how they work
 We recommend building UIs with a [**component-driven**](https://componentdriven.org) process starting with atomic components and ending with pages.
 
 <h1>欢迎来到 liangShip 组件库</h1>
-<h3>安装试试</h3>
-<code>npm install liangShip-ui --save</code>
+<h3>该组件库已经发布到npm上，安装试试</h3>
+<code>npm install liangship --save</code>
+<p>仓库地址：</p>https://github.com/Liang34/liangship
+<p>所用技术：React、React Hooks、sass、typescript等开发</p>
+
